--- a/gleam.toml
+++ b/gleam.toml
@@ -1,10 +1,7 @@
 name = "nemo_gleam"
 version = "1.0.0"
 
-# Fill out these fields if you intend to generate HTML documentation or publish
-# your project to the Hex package manager.
-#
-# description = ""
+description = "Nemo extension for Gleam"
 # licences = ["Apache-2.0"]
 # repository = { type = "github", user = "", repo = "" }
 # links = [{ title = "Website", href = "" }]
