--- a/gleam.toml
+++ b/gleam.toml
@@ -1,9 +1,11 @@
 name = "nemo_gleam"
-version = "1.3.0"
+version = "1.4.0"
 
 description = "GUI extension for Gleam development"
 licences = ["Apache-2.0"]
 repository = {type = "codeberg", user = "salif", repo = "nemo_gleam"}
+
+gleam = ">= 1.5.0"
 
 [dependencies]
 aham = ">= 1.0.0 and < 2.0.0"
